src/snapshots/template_eyre__tests__colored_simple_1.snap
---
source: src/tests.rs
assertion_line: 61
expression: "format!(\"{:?}\", report)"

---
[31mUnable to talk to daemon[0m

