src/snapshots/template_eyre__tests__colored_simple_2.snap
---
source: src/tests.rs
assertion_line: 65
expression: "format!(\"{:?}\", report)"

---
[31mUnable to talk to daemon[0m
[38;5;8mCaused by:[0m
    [33mConnection refused (os error 61)[0m

