src/snapshots/template_eyre__tests__colored_simple_3.snap
---
source: src/tests.rs
assertion_line: 69
expression: "format!(\"{:?}\", report)"

---
[31mUnable to talk to daemon[0m
[38;5;8mCaused by:[0m
   0: [33mConnection refused[0m
   1: [33mos error 61[0m

