src/snapshots/template_eyre__tests__demo_1.snap
---
source: src/tests.rs
assertion_line: 37
expression: "format!(\"{:?}\", report)"

---
Oh no, this program crashed!

[31mUnable to talk to daemon[0m

[36mPlease report this issue to ...[0m
