src/snapshots/template_eyre__tests__demo_3.snap
---
source: src/tests.rs
assertion_line: 52
expression: "format!(\"{:?}\", report)"

---
Oh no, this program crashed!

[31mUnable to talk to daemon[0m
[38;5;8mCaused by:[0m
   0: [33mConnection refused[0m
   1: [33mos error 61[0m

[36mPlease report this issue to ...[0m
