src/snapshots/template_eyre__tests__simple_1.snap
---
source: src/tests.rs
assertion_line: 61
expression: "format!(\"{:?}\", report)"

---
Unable to talk to daemon

