src/snapshots/template_eyre__tests__simple_2.snap
---
source: src/tests.rs
assertion_line: 65
expression: "format!(\"{:?}\", report)"

---
Unable to talk to daemon
Caused by:
    Connection refused (os error 61)

